# video-file-storage-server

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: action.yaml  clippy.yaml
src/: main.rs
src/api/: ext_feature.rs  files.rs  health.rs  mod.rs  storage.rs
