[package]
name = "storage-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
time = { version = "0.3", features = ["macros", "local-offset", "formatting"] }
poem = { version = "1.3.52", features = ["multipart", "tempfile"] }
poem-openapi = { version = "2.0.23", features = ["swagger-ui", "uuid"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
